--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "d3": "^5.8.1",
     "firebase": "^5.8.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -11,7 +12,8 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "typescript": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
