--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-redux": "^6.0.0",
+        "react-router": "^4.3.1",
+        "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.3",
+        "react-table": "^6.9.2",
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
         "typescript": "^3.3.1"
